Added a template for the future with the option to use liquibase. Updated the database script and updated the Advertisement entity by adding a status field. Added the ability to view both active orders from the seller, and in general, all orders that are in the list of the seller's orders.

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 			<version>42.7.3</version>
 		</dependency>
 
+		<!-- TODO: расскоментить, когда буду разворачивать приложение -->
+<!--		<dependency>-->
+<!--			<groupId>org.liquibase</groupId>-->
+<!--			<artifactId>liquibase-core</artifactId>-->
+<!--			<version>4.27.0</version>-->
+<!--		</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
